[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpmonitor"
version = "0.0.1"
authors = [
  { name = "Mark Marton", email = "mark.p.marton@gmail.com" },
]
dependencies = [
    'Cerberus==1.3.4',
    'keyring==23.13.1',
    'psycopg2==2.9.6',
    'requests==2.31.0',
    'schedule==1.2.0',
    'pytest==7.3.1'
]
description = "A simple HTTP monitoring tool."
readme = "README.md"
requires = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "httpmonitor/tests"
]
